--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,15 +1,19 @@
 .container {
   min-height: 100vh;
-  padding: 0 0.5rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  border: 3px solid black
+}
+.content {
+  flex:1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .main {
-  padding: 5rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -19,18 +23,15 @@
 
 .footer {
   width: 100%;
-  height: 100px;
-  border-top: 1px solid #eaeaea;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+background-color: var(--color);
+color: var(--accent);
+  padding: 0.5rem;
+  font-size: 0.8rem;
+  text-align: center;
 }
 
 .footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
+  text-decoration: underline;
 }
 
 .title a {
@@ -47,10 +48,17 @@
 .title {
   margin: 0;
   line-height: 1.15;
-  font-size: 4rem;
+  background-color: var(--color);
+  color: var(--accent);
+  font-family: 'Sanchez', serif;
+  font-size: 2rem;
+  text-align: center;
+  padding: 0.5rem;
+  position: fixed;
+  width: 100%;
+
 }
 
-.title,
 .description {
   text-align: center;
 }
@@ -68,54 +76,38 @@
   font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
     Bitstream Vera Sans Mono, Courier New, monospace;
 }
+.blurb {
+  font-size: 1.4rem;
+  line-height: 1.6;
+}
 
 .grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-  margin-top: 3rem;
+  margin: 3rem 0;
+  width: 90%;
 }
 
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  width: 45%;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
+@media (min-width: 769px) {
   .grid {
-    width: 100%;
-    flex-direction: column;
+    display: grid;
+    grid-gap: 50px;
+    align-items: center;
+    justify-content: center;
+    grid-template-columns: 1fr 1fr;
+    max-width: 1440px;
+    width: 80%;
   }
+
+.title, .footer {
+  text-align: left;
+}
+}
+
+@media (min-width: 1200px) {
+  .grid {
+    grid-template-columns: 2fr 1fr;
+
+  }
+  .blurb {
+  font-size: 2rem;
+}
 }
