--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Sanchez&display=swap');
+
+:root {
+  --color : #52280a;
+  --accent: #FB7F11;
+}
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Lato', sans-serif;
+  color: var(--color);
 }
 
 a {
@@ -14,3 +20,4 @@ a {
 * {
   box-sizing: border-box;
 }
+
