--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,3 +22,139 @@ a {
   box-sizing: border-box;
 }
 
+.container {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 3px solid black
+}
+.content {
+  flex:1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 1rem 0;
+}
+
+
+.main {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer {
+  width: 100%;
+background-color: var(--color);
+color: var(--accent);
+  padding: 0.5rem 1rem;
+  font-size: 0.8rem;
+  text-align: center;
+}
+
+.footer a {
+  text-decoration: underline;
+}
+
+.title a {
+  color: #0070f3;
+  text-decoration: none;
+}
+
+.title a:hover,
+.title a:focus,
+.title a:active {
+  text-decoration: underline;
+}
+
+.title {
+  margin: 0;
+  line-height: 1.15;
+  background-color: var(--color);
+  color: var(--accent);
+  font-family: 'Sanchez', serif;
+  font-size: 2rem;
+  text-align: center;
+  padding: 0.5rem 1rem;
+  position: fixed;
+  width: 100%;
+  z-index : 2
+}
+
+.code {
+  background: #fafafa;
+  border-radius: 5px;
+  padding: 0.75rem;
+  font-size: 1.1rem;
+  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
+    Bitstream Vera Sans Mono, Courier New, monospace;
+}
+.blurb {
+  font-size: 1.4rem;
+  line-height: 1.6;
+}
+
+.next, .prev {
+  width: 50px;
+  height: 50px;
+  background-color: var(--color);
+  border-radius: 50%;
+  display: block;
+  text-indent: 100%;
+white-space: nowrap;
+overflow: hidden;
+margin: auto;
+position: relative;
+}
+.next::before, .prev::before{
+  content: "";
+  width: 0; 
+  height: 0; 
+  position: absolute;
+
+top: 10px;
+transition: all 1s;
+}
+
+.prev::before{
+  border-top: 15px solid transparent;
+  border-bottom: 15px solid transparent;
+  border-right: 25px solid var(--accent);
+  left: 9px;
+}
+
+.prev:hover::before {
+  border-right-color:var(--light);
+}
+
+.next::before{
+  border-top: 15px solid transparent;
+  border-bottom: 15px solid transparent;
+  border-left: 25px solid var(--accent);
+  left: 16px;
+}
+
+.next:hover::before {
+  border-left-color:var(--light);
+}
+
+@media (min-width: 767px) { 
+  .main {
+    margin: 3rem 0;
+
+  }
+
+  .title, .footer {
+    text-align: left;
+  }
+}
+
+@media (min-width: 1200px) {
+  .blurb {
+    font-size: 1.8rem;
+  }
+}
