--- a/styles/Intro.module.css
+++ b/styles/Intro.module.css
@@ -3,31 +3,42 @@
     width: 90%;
   }
 
-
 .row {
     text-align: center;
     font-size: 2rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
   }
-  .row  figure {
+.figure {
     display: flex;
     flex-direction: column;
-    margin: 2rem 0;
+    padding: 20px 0;
+    margin:0;
+  }
+  .row .figure {
+      width: 45%;
   }
   
-  .row .figureGroup {
+  .figureGroup {
     flex:1;
     display: flex;
     flex-direction: column;
     justify-content: center;
   }
-  .row  .figureOuter {
+  .figureOuter {
     display: flex;
     align-items: center;
     justify-content: center;
+    line-height: 0.5;
   }
   
-  .row .figureInner {
+  .figureInner {
     display: block;
+    padding: 0 5px;
+  }
+
+  .row .figure {
     padding: 0 10px;
   }
 
@@ -42,7 +53,7 @@
         align-items: stretch;
         flex-wrap: wrap;
       }
-      .row figure {
+      .row .figure {
         width: 38%;
       }
     }
