--- a/styles/globals.css
+++ b/styles/globals.css
@@ -98,7 +98,13 @@ color: var(--accent);
   line-height: 1.6;
 }
 
+.buttons {
+  display: flex;
+  justify-content: center;
+}
+
 .next, .prev {
+  margin: 0 10px;
   width: 50px;
   height: 50px;
   background-color: var(--color);
@@ -107,7 +113,6 @@ color: var(--accent);
   text-indent: 100%;
 white-space: nowrap;
 overflow: hidden;
-margin: auto;
 position: relative;
 }
 .next::before, .prev::before{
