--- a/styles/Intro.module.css
+++ b/styles/Intro.module.css
@@ -11,31 +11,12 @@
     justify-content: center;
   }
 .figure {
-    display: flex;
-    flex-direction: column;
-    padding: 20px 0;
-    margin:0;
+margin:0;
   }
   .row .figure {
+    margin: 1rem 0 0;
+    padding: 20px 0;
       width: 45%;
-  }
-  
-  .figureGroup {
-    flex:1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-  .figureOuter {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    line-height: 0.5;
-  }
-  
-  .figureInner {
-    display: block;
-    padding: 0 5px;
   }
 
   .row .figure {
@@ -59,8 +40,10 @@
     }
 
     @media (min-width: 1200px) {
-        .row figure {
+        .row .figure {
             width: auto;
+              margin: 2rem 0 0;
           }
+          
     }
   
