--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,7 @@
 :root {
   --color : #52280a;
   --accent: #FB7F11;
+  --accentLight : rgb(251, 127, 17, 0.5);
   --light: #ffff99;
 }
 html,
@@ -28,7 +29,6 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 3px solid black
 }
 .content {
   flex:1;
@@ -36,6 +36,7 @@ a {
   align-items: center;
   justify-content: center;
   margin: 1rem 0;
+  width: 100%;
 }
 
 
@@ -101,6 +102,7 @@ color: var(--accent);
 .buttons {
   display: flex;
   justify-content: center;
+  margin-top: 3rem;
 }
 
 .next, .prev {
