--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,7 +35,6 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 1rem 0;
   width: 100%;
 }
 
@@ -46,6 +45,7 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: 3rem;
 }
 
 .footer {
@@ -102,7 +102,7 @@ color: var(--accent);
 .buttons {
   display: flex;
   justify-content: center;
-  margin-top: 3rem;
+  margin: 2rem;
 }
 
 .next, .prev {
@@ -151,7 +151,7 @@ transition: all 1s;
 
 @media (min-width: 767px) { 
   .main {
-    margin: 3rem 0;
+    margin: 4rem 0 0;
 
   }
 
