Read me update and static export
Added settings to export statically

--- a/styles/CreateNumber.module.css
+++ b/styles/CreateNumber.module.css
@@ -19,10 +19,8 @@
   z-index: 1;
 }
 .isDragging {
-  background-color: var(--color);
-  padding: 10px;
+  background-color: var(--colorLight);
   border-radius: 5px;
-  opacity: 0.5;
 }
 
 .slots {
